RPS game with functional text-based UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
   <title>Document</title>
 </head>
 <body>
+
+  <div id='scoreboard'>
+    <h1 id='title'>Scoreboard</h1>
+    <div id='counter'>
+      <span id='player-counter'>0</span>
+      <span> - </span>
+      <span id='computer-counter'>0</span>
+    <p id='match-result'>Match results</p>
+    </div>
+
+    <div id='selection-buttons'>
+      <button id='rock'>Rock</button>
+      <button id='paper'>Paper</button>
+      <button id='scissors'>Scissors</button>
+    </div>
+    
+  </div>
+
+
   <script src='rock-paper-scissors.js'></script>
 </body>
 </html>
