--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <div id="choice-container">
     <div id="top-row">
       <img class='arrow arrow-top-left' src='/images/arrow-top-left.png'>
-      <button id='rock'><img class='rock-icon' src='/images/bow.png'></button>
+      <button id='wand'><img class='wand-icon'></button>
       <img class="arrow arrow-top-right" src="/images/arrow-top-right.png">
     </div>
     <div id="bottom-row">
-      <button id='paper'><img class='paper-icon' src='/images/wand.png'></button>
+      <button id='bow'><img class='bow-icon'></button>
       <img class='arrow arrow-bottom' src='/images/arrow-bottom.png'>
-      <button id='scissors'><img class='scissors-icon' src='/images/sword.png'></button>
+      <button id='sword'><img class='sword-icon'></button>
     </div>
   </div>  
 
