Fix icon display bug

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   
   <div id="choice-container">
     <div id="top-row">
-      <img class='arrow arrow-top-left' src='/images/arrow-top-left.png'>
+      <img class='arrow arrow-top-left' src='./images/arrow-top-left.png'>
       <button id='wand'><img class='wand-icon'></button>
-      <img class="arrow arrow-top-right" src="/images/arrow-top-right.png">
+      <img class="arrow arrow-top-right" src="./images/arrow-top-right.png">
     </div>
     <div id="bottom-row">
       <button id='bow'><img class='bow-icon'></button>
-      <img class='arrow arrow-bottom' src='/images/arrow-bottom.png'>
+      <img class='arrow arrow-bottom' src='./images/arrow-bottom.png'>
       <button id='sword'><img class='sword-icon'></button>
     </div>
   </div>  
