Adjust sizing for mobile display

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Rock, Paper, Scissors | OtherCatt Inc.</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Diplomata+SC&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet"> <title>Rock, Paper, Scissors | OtherCatt Inc.</title>
 </head>
 <body>
   
   <div id='scoreboard'> 
-    <h1 class='title'>Scoreboard Title</h1>
+    <h1 class='title'>Rock, <br>Parchment, <br>Scissors </h1>
     <div class='counter'>
       <span id='player-counter'>0</span>
       <span> - </span>
       <span id='computer-counter'>0</span>
     </div>
-    <p id='match-result'>Match results</p>
+    <p id='match-result'>Choose your weapon!</p>
   </div>
   
   <div id="choice-container">
